# firebase-core-cpp

./: .gitignore  CMakeLists.txt  README.md  cmakegen.sh  google-services-desktop.json  install_firebase.sh  install_proto.sh
src/: main.cc  phone_listener.h  room_client.h
